@@ -67,6 +67,9 @@ config("skia_public") {
   if (!skia_enable_skgpu_v1) {
     defines += [ "SK_GPU_V1=0" ]
   }
+  if (skia_use_perfetto) {
+    defines += [ "SK_USE_PERFETTO" ]
+  }
 
   # Some older versions of the Clang toolchain change the visibility of
   # symbols decorated with API_AVAILABLE macro to be visible. Users of such
