@@ -44,6 +44,9 @@ public:
         return category;
     }
 
+    // Atrace does not yet support splitting up trace output into sections.
+    void newTracingSection(const char* name) override {}
+
 private:
     SkATrace(const SkATrace&) = delete;
     SkATrace& operator=(const SkATrace&) = delete;
